Bug 805989 - Icons in the overflow chat menu are incorrectly sized. r=felipe, a=gavin

--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -2790,6 +2790,13 @@ stack[anonid=browserStack][responsivemode] {
   font-weight: bold;
 }
 
+.chatbar-button > menupopup > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon {
+  width: auto;
+  height: auto;
+  max-height: 16px;
+  max-width: 16px;
+}
+
 .chatbar-innerbox {
   background: transparent;
   margin: -285px -1px 0 -1px;
