--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -3472,10 +3472,11 @@ stack[anonid=browserStack][responsivemode] {
   -moz-border-end: 1px solid gray;
 }
 
-.chatbar-button > .button-box > .box-inherit > .button-icon {
+.chatbar-button > menupopup > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon {
+  width: auto;
+  height: auto;
   max-height: 16px;
   max-width: 16px;
-  padding: 2px;
 }
 
 .chatbar-button > .toolbarbutton-icon {
